added script tag

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <h1 class="title">Experience Culinary Excellence Food Experience</h1>
             <p class="description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
                 piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock</p>
-            <button class="btn">Shop The Hotest Food</button>
+            <div>
+                <button onclick="welcome()" class="btn">Shop The Hotest Food</button>
+            </div>
         </div>
     </section>
 
@@ -40,7 +42,7 @@
                     <p>Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
                     <button class="btn">Watch All Sells</button>
                 </div>
-                
+
                 <div class="card">
                     <div class="card-image">
                         <img src="assets/pizza.png" alt="">
@@ -67,6 +69,13 @@
             </div>
         </div>
     </section>
+
+    <!-- javascript -->
+    <script>
+        function welcome() {
+            alert('Welcome to Food Restaurant');
+        }
+    </script>
 </body>
 
 </html>
